--- a/styles/HomeStyle.css
+++ b/styles/HomeStyle.css
@@ -3,6 +3,7 @@
     padding:0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     overflow-x: hidden;
+    color: #AAABB6;
 }
 
 main{
@@ -12,13 +13,23 @@ main{
 
 header, footer{
     min-width: 100%;
-    min-height: 5vh;
+    min-height: 10vh;
     background-color: #464866;
+}
+
+ul{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
 a{
     text-decoration: none;
     color: #AAABB6;
+    font-size: 3em;
+    margin-left: 10px;
+
 }
 
 a:hover{
