--- a/styles/AboutStyle.css
+++ b/styles/AboutStyle.css
@@ -1,88 +1,161 @@
 .AboutPage{
-    background-color: #25274D;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
+    text-align: center;
     border: 1px solid;
-    text-align: center;
+    height: 80vh;
 }
-.GameDesign, .Modeling, .Coding{
-    background-color: #25274D;
-    display: grid; 
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto auto;
-    gap: 7px;
-    border: 1px solid black;
-    text-align: center;
-}
+
 
 .Skills{
     background-color: #25274D;
-    display: grid; 
-    grid-template-columns: 33.3% 33.3% 33.3%;
-    grid-template-rows: auto auto auto auto;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     gap: 7px;
-    border: 1px solid black;
-    text-align: center;
+    border: 11px solid black;
+    margin: 5%;
 }
 
 .SkillIcon{
-    border: 3px solid;
+    border: 3px solid black;
+    margin: inherit;
     width: 75%;
+    background-color: azure;
 }
 
 .SkillText{
     display: flex;
     justify-content: center;
-    margin: auto;
-    flex-direction: column;
-}
-
-.Item0{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.GameDesignGridItem{
-    border: 3px solid;
     width: 75%;
-}
-
-.Item1{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.ModelingGridItem{
-    border: 3px solid;
-    width: 75%;
-}
-
-.Item2{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.CodingGridItem{
-    border: 3px solid;
-    width: 75%;
-}
-
-.Item3{
-    display: flex;
-    justify-content: center;
+    text-align: center;
+    margin: inherit;
     flex-direction: column;
 }
 
 #Skill{
     font-size: 40px;
-    width: 50%;
+    width: 97%;
     height: 10%;
     margin: 10px auto auto auto;
     text-align: center;
-    border: 1px solid black;
-    background-color: lightblue;
+    border: 11px solid black;
+    background-color: #29648A;
+}
+
+.ImageContainer{
+    width: 90%;
+    height: 70%;
+    margin: auto;
+    border: 11px solid black;
+    display: inline-flex;
+    overflow: hidden;
+    background-color: #25274D;
+}
+
+#AboutMeText{
+    font-size: 22px;
+    margin: auto;
+    width: 80%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    
+}
+
+#ProfessionalImage{
+    width: 25%;
+    height: 75%;
+    margin: auto;
+}
+
+#AboutMeTitle{
+    font-size:45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: underline;
+    text-underline-offset: 1px;
+    text-align: center;
+    margin: auto;
+    width: 97%;
+    height: 15%;
+    background-color: #29648A;
+    border: 8px solid black;
+}
+
+.Grid{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #25274D;
+    margin: auto;
+    width: 90%;
+    height: 95vh;
+    gap: 10px;
+    border: 8px solid black;
+}
+
+.VideoGrid{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+
+}
+
+.VideoContainer, .ModelContainer{
+    width:50%;
+    height: 100%;
+}
+
+#MText{
+    height:5%;
+    margin:auto;
+}
+
+.ModelingGrid{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2px;
+    width: 100%;
+    height: 90%;
+}
+
+#VideoGameText, #ModelingText{
+    font-size: 32px;
+    width: 100%;
+    background-color: blueviolet;
+    text-align: center;
+}
+
+#Model1{
+    margin-top: 5%;
+    margin-left: 36%;
+    width:55%;
+    height: 60%;
+    border: 8px solid black;
+}
+
+#Model2{
+    width: 45%;
+    height: 65%;
+    margin-left: 15%;
+    border: 8px solid black;
+}
+
+#VideoGame1{
+    margin: auto auto auto auto;
+    width: 80%;
+    height: 65%;
+    border: 8px solid black;
+}
+.projectpage:hover{
+    text-decoration: underline;
+    color:#2E9CCA;
 }
