--- a/styles/ContactStyle.css
+++ b/styles/ContactStyle.css
@@ -1,44 +1,79 @@
-*{
-    margin:0;
-    padding:0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    overflow-x: hidden;
-}
-
-header, footer{
-    min-width: 100%;
-    min-height: 5vh;
-    background-color: #464866;
-}
-
-a{
-    text-decoration: none;
-    color: #AAABB6;
-}
-
-a:hover{
-    text-decoration: underline;
-    color: #29648A;
-}
-
-a:visited{
-    color: #2E9CCA;
-    text-decoration: underline;
-}
-
-main{
-    height: 90vh;
+.Contact{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
+    margin-top: 1%;
+}
+.ContactInfo{
+    width: 89%;
+    height: 100%;
+    display: inline-flex;
+    border: 10px solid black;
+    margin: 1% auto auto auto;
+    background-color:#25274D;
 }
 
-#ProfessionalImage{
-    width: 11%;
-    height: 35%;
-    position: absolute;
-}
-
-label{
-    display: inline-block;
-    width: 75px;
+.ContactInfo label{
+    display: inline-flex;
+    width: 100px;
     text-align: right;
+    margin-top: 5%;
+    margin-left: 2%;
+}
+
+#ContactTitle{
+    text-align: center;
+    text-decoration: underline;
+    background-color: #25274D;
+    
+}
+
+.SubmitButton{
+    width: 15%;
+    height: 20%;
+    margin: 3% 0 3% 43%;
+}
+
+#GitHub{
+    width: 15%;
+    height: 20%;
+    margin-left: 43%;
+}
+
+#GitHub:hover{
+    filter: hue-rotate();
+}
+
+.Form{
+    border: 3px solid;
+    width: 35%;
+    height: 85%;
+    margin:auto;
+    background-color: #25274D;
+}
+
+.ContactInfo input{
+    width: 50%;
+}
+
+.ContactInfo textarea{
+    width: 50%;
+    vertical-align: center;
+}
+
+#ContactHeading{
+    font-size:45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: underline;
+    text-underline-offset: 1px;
+    text-align: center;
+    margin:auto;
+    width: 97%;
+    height: 15%;
+    border: 8px solid black;
+    background-color: #29648A;
 }
