--- a/styles/HomeStyle.css
+++ b/styles/HomeStyle.css
@@ -2,25 +2,84 @@
     margin:0;
     padding:0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    overflow-x: hidden;
     color: #AAABB6;
+    scroll-behavior: smooth;
 }
+ 
+#Nav{
+    display: flex;
+    justify-content: center;
+}
+
+#Nav li{
+    padding-right: 90px ;
+    list-style: none;
+}
+
+#Nav ul #Dropdown1{
+    position: relative;
+    height: 100%;
+    top: 0;
+}
+
+#Nav ul #Dropdown2{
+    position: relative;
+    height: 100%;
+    top: 0;
+}
+
+#Nav ul #Dropdown3{
+    position: relative;
+    height: 100%;
+    top: 0;
+}
+
+#Dropdown1:hover .SubMenu{
+    display: block;
+    background-color: #29648A;
+    border: 4px solid black;
+    border-radius: 5%;
+}
+
+ #Dropdown2:hover .SubMenu{
+    display: block;
+    background-color: #29648A;
+    border: 4px solid black;
+    border-radius: 5%;
+}
+
+#Dropdown3:hover .SubMenu{
+    display: block;
+    background-color: #29648A;
+    border: 4px solid black;
+    border-radius: 5%;
+}
+
+
+.SubMenu{
+    display: none;
+    position: absolute;
+} 
 
 main{
     height: 300vh;
     width: 100vw;
     background-color: #464866;
+    overflow-x: hidden;
 }
 
 header, footer{
     min-width: 100%;
-    min-height: 8vh;
+    min-height: 12vh;
     background-color: #313350;
+
 }
 
 a{
     text-decoration: none;
     color: #AAABB6;
+    text-align: center;
+    height: 100%;
 }
 
 a:hover{
@@ -36,15 +95,8 @@ ul{
     position: absolute;
     display: flex;
     justify-content: center;
-    margin: auto;
-
-}
-
-#Home, #AboutID, #ContactID{
-    text-decoration: none;
-    color: #AAABB6;
-    margin-left: 10px;
-    font-size: 22px;
+    align-items: center;
+    font-size: 2em;
 
 }
 
