--- a/styles/HomeStyle.css
+++ b/styles/HomeStyle.css
@@ -1,6 +1,8 @@
 *{
     margin:0;
     padding:0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #AAABB6;
     scroll-behavior: smooth;
 }
  
