--- a/styles/HomeStyle.css
+++ b/styles/HomeStyle.css
@@ -38,6 +38,7 @@
     display: block;
     background-color: #29648A;
     border: 4px solid black;
+    width: 2em;
     border-radius: 5%;
 }
 
@@ -45,11 +46,13 @@
     display: block;
     background-color: #29648A;
     border: 4px solid black;
+    width: 100%;
     border-radius: 5%;
 }
 
 #Dropdown3:hover .SubMenu{
     display: block;
+    width: 70%;
     background-color: #29648A;
     border: 4px solid black;
     border-radius: 5%;
@@ -77,19 +80,18 @@ header, footer{
 
 a{
     text-decoration: none;
-    color: #AAABB6;
     text-align: center;
     height: 100%;
 }
 
-a:hover{
-    text-decoration: underline;
-    color: #29648A;
+#submenutext{
+    font-size: 20px ;
+    color: #AAABB6;
 }
 
-a:visited{
-    color: #2E9CCA;
+#submenutext:hover{
     text-decoration: underline;
+    color: black;
 }
 ul{
     position: absolute;
