--- a/styles/ProjectStyle.css
+++ b/styles/ProjectStyle.css
@@ -7,7 +7,7 @@
 }
 
 main{
-    height: 300vh;
+    height: 400vh;
     width: 100vw;
     background-color: #464866;
 }
@@ -34,6 +34,10 @@ h2{
     font-size: 34px;
     border: 11px solid black;
 
+}
+
+#HeadingStyle{
+    font-size:48px;
 }
 
 #Home, #AboutID, #ContactID{
@@ -113,8 +117,8 @@ header{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: auto;
-    height: 10%;
+    margin: 5%;
+    height: 8%;
     background-color: #25274D;
 }
 
