--- a/styles/HomeStyle.css
+++ b/styles/HomeStyle.css
@@ -35,29 +35,31 @@
 }
 
 #Dropdown1:hover .SubMenu{
-    display: block;
+    display: flex;
     background-color: #29648A;
     border: 4px solid black;
-    width: 2em;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 5%;
 }
 
  #Dropdown2:hover .SubMenu{
-    display: block;
+    display: flex;
     background-color: #29648A;
     border: 4px solid black;
-    width: 100%;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 5%;
 }
 
 #Dropdown3:hover .SubMenu{
-    display: block;
-    width: 70%;
+    display: flex;
     background-color: #29648A;
     border: 4px solid black;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 5%;
 }
-
 
 .SubMenu{
     display: none;
@@ -65,7 +67,7 @@
 } 
 
 main{
-    height: 300vh;
+    height: 625vh;
     width: 100vw;
     background-color: #464866;
     overflow-x: hidden;
@@ -85,15 +87,16 @@ a{
 }
 
 #submenutext{
-    font-size: 20px ;
+    font-size: 20px;
     color: #AAABB6;
+    margin-left: 35%;
 }
 
 #submenutext:hover{
     text-decoration: underline;
     color: black;
 }
-ul{
+nav ul{
     position: absolute;
     display: flex;
     justify-content: center;
