--- a/styles/AboutStyle.css
+++ b/styles/AboutStyle.css
@@ -23,22 +23,6 @@
     margin: 2%;
 }
 
-/* .SkillIcon{
-    border: 3px solid black;
-    margin: inherit;
-    width: 75%;
-    background-color: azure;
-}
-
-.SkillText{
-    display: flex;
-    justify-content: center;
-    width: 75%;
-    text-align: center;
-    margin: inherit;
-    flex-direction: column;
-} */
-
 #Skill{
     font-size: 40px;
     width: 100%;
@@ -163,8 +147,12 @@
     border: 8px solid black;
 }
 .projectpage:hover{
-    text-decoration: underline;
     color:#2E9CCA;
+}
+
+.projectpage{
+    text-decoration: underline;
+    color: #1b6c8f;
 }
 
 .CardText{
